2006-01-26  Edward Hervey  <edward@fluendo.com>

	* pitivi/discoverer.py:
	Handle gracefully files that contain no stream but emit a
	GST_TAG_ELEMENT with redirection.
	Force pipeline to NULL when finished analyzing a file.

2006-01-25  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/Makefile.am: (ui_PYTHON): 
	Forgot to add those files to be distributed.

2006-01-25  Christian Schaller <christian@fluendo.com>

	* Add .cvsignore files
	* Add COPYING file with the LGPL
	* Configure .desktop file to get installed

2006-01-24  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	* pitivi/timeline.py:
	doc fix
	* pitivi/ui/complexlayer.py:
	* pitivi/ui/complexstack.py:
	* pitivi/ui/complextimeline.py:
	* pitivi/ui/timeline.py:
	* pitivi/ui/timelineobjects.py:
	Make way for the ComplexTimelineView

2006-01-18  Edward Hervey  <edward@fluendo.com>

	Release 0.9.9.2 "No te entiendo"

	* RELEASE:
	* configure.ac:

2006-01-18  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Require gnonlin 0.10.0.5
	
	* pitivi/bin.py:
	* pitivi/discoverer.py:
	* pitivi/objectfactory.py:
	cleanup.
	
	* pitivi/ui/sourcefactories.py:
	Add mini-doc
	* pitivi/ui/timeline.py:
	cleanup.
	* pitivi/ui/timelineobjects.py:
	Remove/debug all the print statements.
	* pitivi/ui/viewer.py:
	cleanup.

2006-01-11  Edward Hervey  <edward@fluendo.com>

	* pitivi/discoverer.py:
	Don't emit 'finished-analyzing' if there's nothing discovered.

2006-01-11  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	PyGnome 2.10.0 is sufficient requirement.
	* pitivi/ui/plumber.py:
	Use gconf*sink elements instead of creating them ourselves.

2006-01-08  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/plumber.py:
	Check for the gstreamer 0.10 (and not 0.9) gconf keys.

2005-12-24  Edward Hervey  <edward@fluendo.com>

	0.9.9.1 release
	
	* RELEASE:
	* bin/pitivi.in:
	Switch on threads
	* configure.ac:
	0.9.9.1 release (thanks a lot stupid sourceforge)
	* pitivi/bin.py: